# lemonde_podcast_deutsch

./: .gitignore  README.md  cronjob.py  db.py  empty_database.sh  feed.xml  fetch.py  fetch_to_database.py  fetching.py  format_lint.sh  generate.py  lemondetypes.py  open_db.sh  schema.sql  setup.cfg  test_fetch_to_database.py  upload_feed.py
.github/workflows/: check.yml
migrate/: fetch_sizes.py  to_db.py
mock/: archiv-audio  archiv-audio?base=lmd_2011_10_14
stubs/bs4/: __init__.pyi  element.pyi
stubs/podgen/: __init__.pyi
