[metadata]
name = lemonde-diplomatique-deutsch-podcast-generator
version = 0.0.1
author = Ignacio Martinez Vazquez
author_email = ignamv@gmail.com
description = Generate a podcast feed for Le Monde Diplomatique's free audio archive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ignamv/lemonde_podcast_deutsch
project_urls =
    Bug Tracker = https://github.com/ignamv/lemonde_podcast_deutsch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Private :: Do Not Upload

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires = 
    beautifulsoup4
    podgen
    requests
[options.packages.find]
where = .
[options.extras_require]
dev = black; pylint; types-requests; mypy
